--- a/templates/build.html
+++ b/templates/build.html
@@ -105,27 +105,27 @@
 
                     <div class="row col-sm-6 mx-auto">
                         <div class="col-sm-4">
-                            <img id="poke0" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke0" src="../static/white.jpg" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-sm-4">
-                            <img id="poke1" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke1" src="../static/white.jpg" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-sm-4">
-                            <img id="poke2" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke2" src="../static/white.jpg" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-sm-4">
-                            <img id="poke3" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke3" src="../static/white.jpg" class="img-fluid" alt="">
                         </div>
 
                         <div  class="col-sm-4">
-                            <img id="poke4" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke4" src="../static/white.jpg" class="img-fluid" alt="">
                         </div>
 
                         <div  class="col-sm-4">
-                            <img id="poke5" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke5" src="../static/white.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
                     <a href="/welcome" class="btn btn-light" id="finalize" value="" name="team"> I'm done with this team </a>
