--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 <h2> Battle </h2>
                 Battle! Battle! Battle!
                 <br> <br>
-                <a href="" class="btn btn-light"> Battle Now! </a>
+                <a href="/battle" class="btn btn-light"> Battle Now! </a>
             </div>
         </div>
     </div>
