--- a/templates/setup.html
+++ b/templates/setup.html
@@ -28,7 +28,7 @@
             <a class="nav-link button" href="/build"> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""> Battle </a>
+            <a class="nav-link" href="/setupBattle"> Battle </a>
         </li>
     </ul>
 
@@ -48,17 +48,19 @@
                 <form>
                     <h4> Player 1, choose your team! </h4>
                     <div class="form-group">
-                        <select class="form-control col-sm-6 mx-auto">
-                          <option> 1 </option>
-                          <option> 2 </option>
+                        <select name="team1" class="form-control col-sm-6 mx-auto">
+                          {% for i in teams %}
+                          <option> Team {{i}} </option>
+                          {% endfor %}
                         </select>
                     </div> <br>
 
                     <h4> Player 2, choose your team! </h4>
                     <div class="form-group">
-                        <select class="form-control col-sm-6 mx-auto">
-                          <option> 1 </option>
-                          <option> 2 </option>
+                        <select name="team2" class="form-control col-sm-6 mx-auto">
+                          {% for i in teams %}
+                          <option> Team {{i}} </option>
+                          {% endfor %}
                         </select>
                     </div>
 
