--- a/templates/build.html
+++ b/templates/build.html
@@ -29,7 +29,7 @@
             <a class="nav-link button active" href="/build"> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""> Battle </a>
+            <a class="nav-link" href="/setupBattle"> Battle </a>
         </li>
     </ul>
 
