--- a/templates/setup.html
+++ b/templates/setup.html
@@ -45,7 +45,7 @@
             <div class="card-body p-5 mx-auto">
                 <h2 class = "card-title"> Before we begin... </h2> <br>
 
-                <form>
+                <form action="/battle">
                     <h4> Player 1, choose your team! </h4>
                     <div class="form-group">
                         <select name="team1" class="form-control col-sm-6 mx-auto">
