--- a/templates/build.html
+++ b/templates/build.html
@@ -90,9 +90,9 @@
                     </div>
 
                     <h3> Moves: </h3>
-                    <li id="chosenMoves">
+                      <li id="chosenMoves" class="text-inline">
 
-                    </li>
+                      </li>
                     <button onclick="finishPokemon()" id="finishPokemon" type="button" class="btn btn-light"> I'm Finished With This Pokemon! </button>
                 </div>
             </div>
@@ -131,6 +131,7 @@
                     <form action = "/welcome">
                       <button type="submit" class="btn btn-light" id="finalize" value="" name="team"> I'm done with this team </button>
                     </form>
+                    <button onclick="randomTeam()" type="button" class="btn btn-light" id="randTeam" value="" name="team"> choose a random team </button>
                 </div>
             </div>
         </div>
