--- a/templates/setup.html
+++ b/templates/setup.html
@@ -34,7 +34,7 @@
 
     <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href=""> Logout </a>
+            <a class="nav-link" href="/logout"> Logout </a>
         </li>
     </ul>
 </nav>
