--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -77,6 +77,9 @@
       <div class="modal-body" id="winorloss">
         <p>has lost</p>
       </div>
+      <div class="modal-footer">
+        <a href="/welcome" type="submit"> Return to home page </a>
+      </div>
   </div>
 </div>
 
