name display fix

--- a/templates/build.html
+++ b/templates/build.html
@@ -83,7 +83,7 @@
         <div class="col-sm-6">
             <div class="card border-0 shadow my-5 ml-5" style="opacity: .9;">
                 <div class="card-body p-5">
-                    <h2 class = "card-title"> Current Pokemon: {{name}} </h2>
+                    <h2 class = "card-title" id = "displayname"> Current Pokemon: </h2>
 
                     <div class="col-sm-4">
                         <img src="../static/white.jpg" class="img-fluid" alt="" id = "pdisplay">
