--- a/templates/build.html
+++ b/templates/build.html
@@ -86,7 +86,7 @@
                     <h2 class = "card-title" id = "displayname"> Current Pokemon: </h2>
 
                     <div class="col-sm-4">
-                        <img src="../static/white.jpg" class="img-fluid" alt="" id = "pdisplay">
+                        <img src="" class="img-fluid" alt="" id = "pdisplay">
                     </div>
 
                     <h3> Moves: </h3>
@@ -129,9 +129,9 @@
                         </div>
                     </div>
                     <form action = "/welcome">
-                      <button type="submit" class="btn btn-light" id="finalize" value="" name="team"> I'm done with this team </button>
+                      <button type="submit" class="btn btn-light" id="finalize" value="" name="team"> I'm Done With This Team </button>
                     </form>
-                    <button onclick="randomTeam()" type="button" class="btn btn-light" id="randTeam" value="" name="team"> choose a random team </button>
+                    <button onclick="randomTeam()" type="button" class="btn btn-light" id="randTeam" value="" name="team"> Choose a Random Team </button>
                 </div>
             </div>
         </div>
